{
    "name": "AttackCombos",
    "maps": [
        {
            "name": "Combat",
            "id": "9c100d54-11cd-4ade-9f0e-9885112a957e",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "9737bbc8-d8b9-4d26-a121-0e48843229f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "3d38d41d-e93f-4da8-b6a1-0dcc6e93d00c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6c528919-7bf6-46bd-81b7-c9d00e1560d4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "305ef95d-bd9c-4713-b3bf-bf8925b27585",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}